# Insightforge

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  InsightForge_Auditable_Data_Scientist_Agent_Planning.md  Makefile  README.md  docker-compose.yml  pyproject.toml  uv.toml
.github/workflows/: test.yml
apps/api/: main.py
apps/api/static/: index.html
benchmark/datasets/: campaign_performance.csv  operations_quality.csv  portfolio_retail.csv  quality_retail.csv  retail_small.csv  saas_growth.csv  statistics.csv
benchmark/questions/: extended.json  portfolio.json  smoke.json
docs/: architecture.md  benchmark-results.md  deployment.md  development.md  evaluation.md  security.md
docs/adr/: 0001-deterministic-first-planning.md  0002-read-only-sql-policy.md  0003-sandbox-boundary.md
insightforge/: __init__.py  benchmark.py  config.py  reporting.py  serialization.py
insightforge/agents/: critic.py  planner.py  report_agent.py  statistics_agent.py  visualization_agent.py
insightforge/evaluators/: basic.py
insightforge/graph/: langgraph_workflow.py  workflow.py
insightforge/ingestion/: __init__.py  service.py  validators.py
insightforge/models/: llm.py
insightforge/observability/: mlflow_tracker.py
insightforge/profiling/: profiler.py
insightforge/sandbox/: __init__.py  executor.py  python_executor.py
insightforge/security/: auth.py
insightforge/storage/: database.py
tests/integration/: test_api.py  test_benchmark.py  test_extended_features.py  test_workflow.py
tests/security/: test_adversarial.py
tests/unit/: test_planner.py  test_security_features.py  test_sql_policy.py
