[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insightforge"
version = "0.2.0"
description = "Auditable data scientist agent for reproducible, evidence-backed CSV and Parquet analysis"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["data-science-agent", "langgraph", "duckdb", "auditable-ai"]
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.2,<2",
  "langgraph>=0.6,<2",
  "mlflow>=3,<4",
  "openai>=1.100,<3",
  "pandas>=2.2,<4",
  "pyarrow>=18,<23",
  "scipy>=1.14,<2",
  "fastapi>=0.115,<1",
  "pydantic>=2.10,<3",
  "python-multipart>=0.0.20,<1",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "coverage[toml]>=7.6,<8",
  "httpx>=0.28,<1",
  "mypy>=1.15,<2",
  "pytest>=8.3,<9",
  "ruff>=0.11,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["insightforge", "apps"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q -p no:cacheprovider --basetemp=.runtime/tmp/pytest"

[tool.ruff]
line-length = 120
target-version = "py312"
cache-dir = ".runtime/cache/ruff"
exclude = [".venv", ".runtime", "tmp*", "pytest-cache-files-*"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
cache_dir = ".runtime/cache/mypy"
packages = ["insightforge", "apps"]
[tool.coverage.run]
branch = true
source = ["apps", "insightforge"]
data_file = ".runtime/coverage/.coverage"

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 75

[tool.coverage.html]
directory = ".runtime/coverage/html"

[tool.coverage.xml]
output = ".runtime/coverage/coverage.xml"
